--- a/.github/workflows/first_action.yml
+++ b/.github/workflows/first_action.yml
@@ -6,12 +6,16 @@ jobs:
     steps:
       - name: Printing Greetings
         run: echo " Hello World :) "
+      - name: Printing Current Working Directory
+        run: pwd
       - name: listing directory
         run: ls -ltr
       - name: Printing Goodbye
         run: echo " Bye Bye user :) "
       - name: chaning directory 
         run: cd /
+      - name: Printing Current Working Directory
+        run: pwd
       - name: listing root directory
         run: ls -ltr
         
