--- a/.github/workflows/first_action.yml
+++ b/.github/workflows/first_action.yml
@@ -13,7 +13,7 @@ jobs:
       - name: Printing Goodbye
         run: echo " Bye Bye user :) "
       - name: chaning directory 
-        run: cd /
+        run: sudo cd /
       - name: Printing Current Working Directory
         run: pwd
       - name: listing root directory
